--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ __pycache__/
 *.py[cod]
 
 # Data files
-data/raw/
-data/processed/
+# data/raw/
+# data/processed/
 
 # Jupyter checkpoints
 .ipynb_checkpoints/
